# learnOpenGL

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: camera.h  mesh.h  model.h  shader.h
src/: camera.cpp  main.cpp  mesh.cpp  shader.cpp
src/shaders/: framebuffers_screen.fs  model_loading.fs  object_fragment.glsl
